sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
getNombreValeurs()
	for (i <- 0 to getNombreValeurs - 2){
		if (plusPetitQue(int i, int i + 1)){
		}
		if (plusPetitQue(int i, int i + 1)){
			echange(int i, int i + 1);
		}
	}

}
